Sidebar zur Übersicht von Notizen hinzugefügt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Notes</title>
 </head>  
 <body>
+    <div id="nav-bar">
+        <input id="nav-toggle" type="checkbox"/>
+        <div id="nav-header"><a id="nav-title" target="_blank">NOTES</a>
+          <label for="nav-toggle"><span id="nav-toggle-burger"></span></label>
+          <hr/>
+        </div>
+        <div id="nav-content">
+            <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Pinned Items</span></div>
+        </div>
+      </div>
 <div class="popup-box">
     <div class="popup">
         <div class="content">
