--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="nav-bar">
         <div id="nav-header"><div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</div>
-          <hr/>
+          <hr data-content="Notes">
         </div>
         <div id="nav-content">
             <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading notes...</span></div>
