--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <div class="container">
         <div class="toolbar">
         <div class="head">
-            <input type="text" placeholder="Filename" value="untitled" id="filename">
             <select id="formatSelect">
                 <option value="" selected hidden disabled>Format</option>
                 <option value="h1">Heading 1</option>
@@ -91,8 +90,11 @@
             <button id="showCodeBtn" data-active="false">&lt;/&gt;</button>
         </div>
         </div>
+        <div class="title">
+            Loading title...
+        </div>
         <div id="content" contenteditable="true" spellcheck="false">
-        Lorem, ipsum.
+        Loading content...
         </div>
     </div>
    
