Funktion weitergemacht, wenn man auf Notiz klickt, dass diese angezeigt wird und bearbeitbar ist.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <button id="showCodeBtn" data-active="false">&lt;/&gt;</button>
         </div>
         </div>
-        <div id="title">
+        <div id="title" contenteditable="true" spellcheck="false">
             Loading title...
         </div>
         <div id="content" contenteditable="true" spellcheck="false">
