--- a/index.html
+++ b/index.html
@@ -12,38 +12,13 @@
 <body>
 
     <div id="nav-bar">
-        <div id="nav-header"><div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</div>
+        <div id="nav-header"><div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</span></div>
           <hr data-content="Notes">
         </div>
         <div id="nav-content">
             <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading notes...</span></div>
         </div>
       </div>
-
-
-
-    <div class="popup-box">
-        <div class="popup">
-            <div class="content">
-                <header>
-                    <p>Add a new note</p>
-                    <i class="uil uil-times"></i>
-                </header>
-                <form action="#">
-                    <div class="row title">
-                        <label for="">Title</label>
-                        <input type="text">
-                    </div>
-                    <div class="row description">
-                        <label for="">Description</label>
-                        <textarea></textarea>
-                    </div>
-                    <button>Add Note</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
     <div class="container">
         <div class="toolbar">
         <div class="head">
