--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
     <div id="nav-bar">
-        <div id="nav-header"><div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</span></div>
-          <hr data-content="Notes">
-        </div>
+        <div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</span></div>
+
+
         <div id="nav-content">
             <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading notes...</span></div>
         </div>
