last updated angepasst und benutzerfreundlich gemacht

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </div>
     </div>
     <div id="title" contenteditable="true" spellcheck="false">
-        Loading title...
+        Please select a note to load data.
     </div>
     <div id="content" contenteditable="true" spellcheck="false">
-        Loading content...
+
     </div>
 </div>
 
