--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div>
             <br>
-        <span> Last edited: <div id="last-updated"></div></span>
+            <div> Last edited: <span id="last-updated"></span></div>
     </div>
     </div>
     <div id="title" contenteditable="true" spellcheck="false">
