rechtsklick design und funktionen begonnen

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <i class='bx bx-terminal'></i>
                 <span>Ask AI</span>
             </li>
-            <li class="item" onclick="copyToClipboard()">
+            <li class="item">
                 <i class='bx bx-copy-alt'></i>
                 <span>Copy</span>
             </li>
