rechtsklick design und funktionen begonnen

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="wrapper">
     <div class="content">
         <ul class="menu">
-            <li class="item copy">
+            <li class="item" id="copy">
                 <i class='bx bx-terminal'></i>
                 <span>Ask AI</span>
             </li>
