Funktionsanpassung copy click methode

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <i class='bx bx-terminal'></i>
                 <span>Ask AI</span>
             </li>
-            <li class="item" id="copy">
+            <li class="item" id="copy" onclick="copyToClipboard()">
                 <i class='bx bx-copy-alt'></i>
                 <span>Copy</span>
             </li>
