--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <br>
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content">
-        <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading notes...</span></div>
+        <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading fsdfsdfdsfdsnotes...</span> <span
+                id="last-updated">20.04.2023</span></div>
     </div>
 </div>
 <div class="container">
@@ -69,8 +70,6 @@
             <button id="unlinkBtn"><i class='bx bx-unlink'></i></button>
         </div>
         <div>
-            <br>
-            <div> Last edited: <span id="last-updated"></span></div>
     </div>
     </div>
     <div id="title" contenteditable="true" spellcheck="false">
@@ -78,56 +77,6 @@
     </div>
     <div id="text-content" contenteditable="true" spellcheck="false">
 
-    </div>
-</div>
-
-
-<div class="wrapper">
-    <div class="content">
-        <ul class="menu">
-            <li class="item">
-            <i class='bx bx-terminal'></i>
-                <span>Ask AI</span>
-            </li>
-            <li class="item" id="copy" onclick="copyToClipboard()">
-                <i class='bx bx-copy-alt'></i>
-                <span>Copy</span>
-            </li>
-            <li class="item">
-                <i class='bx bx-paste'></i>
-                <span>Paste</span>
-            </li>
-
-            <!--<li class="item share">
-                <div>
-                    <i class='bx bx-paste' ></i>
-                    <span>Paste</span>
-                </div>
-                <i class="uil uil-angle-right"></i>
-                <ul class="share-menu">
-                    <li class="item">
-                        <i class="uil uil-twitter-alt"></i>
-                        <span>Twitter</span>
-                    </li>
-                    <li class="item">
-                        <i class="uil uil-instagram"></i>
-                        <span>Instagram</span>
-                    </li>
-                    <li class="item">
-                        <i class="uil uil-dribbble"></i>
-                        <span>Dribble</span>
-                    </li>
-                    <li class="item">
-                        <i class="uil uil-telegram-alt"></i>
-                        <span>Telegram</span>
-                    </li>
-                </ul>
-            </li>-->
-            <li class="item">
-                <i class="bx bx-trash"></i>
-                <span>Delete</span>
-            </li>
-        </ul>
     </div>
 </div>
 
