Projekte hinzufügen noch nicht fertig

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 
 
 <div id="nav-bar">
-    <div class="add-box nav-button-addNote" target="_blank"><span>+ Add Note</span></div>
+    <div class="add-box nav-project-addNote" target="_blank"><span>+ Add Note</span></div>
     <br>
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content">
-        <div class="nav-button"><i class="fas fa-thumbtack"></i><span>Loading fsdfsdfdsfdsnotes...</span> <span
-                id="last-updated">20.04.2023</span></div>
+        <a class="nav-project"><i class='bx bx-chevron-down dropdown'></i>
+            <span id="projecttitle">Loading fsdfsdfdsfdsnotes...</span>
+            <span id="last-updated">20.04.2023</span>
+        </a>
+        <div class="nav-sub-notes">
+            <a class="sub-note">Note 1</a>
+            <a class="sub-note">Note 2</a>
+            <a class="sub-note">Note 3</a>
+        </div>
     </div>
 </div>
 <div class="container">
