Projekte hinzufügen noch nicht fertig

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container">
     <div class="toolbar">
         <div class="head">
-            <select id="formatSelect">
+            <label for="formatSelect"></label><select id="formatSelect">
                 <option value="" selected hidden disabled>Format</option>
                 <option value="h1">Heading 1</option>
                 <option value="h2">Heading 2</option>
