Projekte hinzufügen noch nicht fertig

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content">
         <div class="nav-sub-notes">
+            <a class="sub-note"></a>
         </div>
     </div>
 </div>
