--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="add-box nav-project-addNote" target="_blank"><span>+ Add Note</span></div>
     <br>
     <div class="nav-bar-heading">NOTES</div>
+    <a class="nav-project"></a>
     <div id="nav-content">
         <div class="nav-sub-notes">
-            <a class="sub-note"></a>
         </div>
     </div>
 </div>
