--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <div id="nav-bar">
-    <div class="add-box nav-project-addNote" target="_blank"><span>+ Add Note</span></div>
+    <div class="add-box nav-project-addProject" target="_blank"><span>+ Add Project</span></div>
     <br>
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content">
