--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div class="add-box nav-project-addProject" target="_blank"><span>+ Add Project</span></div>
     <br>
     <div class="nav-bar-heading">NOTES</div>
-    <div id="nav-content">
-        </div>
+    <div id="nav-content"></div>
     </div>
 </div>
 <div class="container">
