--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <button id="unorderedListBtn"><i class='bx bx-list-ul'></i></button>
             <button id="linkBtn"><i class='bx bx-link'></i></button>
             <button id="unlinkBtn"><i class='bx bx-unlink'></i></button>
+            <button id="askAI"><i class='bx bxs-bolt'></i></button>
         </div>
         <div>
         </div>
