--- a/index.html
+++ b/index.html
@@ -17,7 +17,29 @@
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content"></div>
     </div>
+
+<div class="popup-box">
+    <div class="popup">
+        <div class="content">
+            <header>
+                <p>Add a new project</p>
+                <i class="bx bx-x"></i>
+            </header>
+            <form action="#">
+                <div class="row title">
+                    <label for="">Title</label>
+                    <input class="inputTitle" type="text">
+                </div>
+                <div class="row date">
+                    <label for="">Due Date</label>
+                    <input class="inputDate" type="date">
+                </div>
+                <button>Add Note</button>
+            </form>
+        </div>
+    </div>
 </div>
+
 <div class="container">
     <div class="toolbar">
         <div class="head">
@@ -77,8 +99,9 @@
         Please select a note to load data.
     </div>
     <div id="text-content" contenteditable="true" spellcheck="false">
-
     </div>
+
+
 </div>
 
 <script type="module" src="script.js"></script>
