--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 class="closeIcon bx bx-x bx-lg text-right"></i></h3>
 
         <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
-        <p class=" text-m text-white my-5 text-center inputDate">Due date:</p>
-        <input type="date" class="input w-full max-w-xl"/>
+        <p class=" text-m text-white my-5 text-center">Due date:</p>
+        <input type="date" class="input w-full max-w-xl inputDate"/>
         <div class="modal-action">
             <form method="dialog">
                 <button class="btn content-center">Submit</button>
