--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <dialog id="my_modal_1" class="modal">
     <div class="modal-box bg-secondary items-center">
         <h3 class="font-bold text-lg text-white mb-5 text-center">Add Project <i
-                class="closeIcon bx bx-x bx-lg text-right"></i></h3>
+                class="bx bx-x bx-lg text-right closeIcon"></i></h3>
 
         <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
         <p class=" text-m text-white my-5 text-center">Due date:</p>
