CloseIcon on click

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
         <p class=" text-m text-white my-5 text-center">Due date:</p>
         <input type="date" class="input w-full max-w-xl inputDate"/>
-        <div class="modal-action">
-            <form method="dialog" class="modal-backdrop">
-                <button class="btn content-center">Submit</button>
-            </form>
-        </div>
+        <form method="dialog" class="modal-backdrop">
+            <button>close</button>
+        </form>
     </div>
 </dialog>
 
