--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class=" text-m text-white my-5 text-center">Due date:</p>
         <input type="date" class="input w-full max-w-xl inputDate"/>
         <form method="dialog" class="modal-backdrop">
-            <button class="btn">close</button>
+            <button class="btn content-center">Submit</button>
         </form>
     </div>
 </dialog>
