--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <dialog id="my_modal_1" class="modal">
     <div class="modal-box bg-secondary items-center">
         <h3 class="font-bold text-lg text-white mb-5 text-center">Add Project <i
-                class="bx bx-x bx-lg text-right closeIcon"></i></h3>
+                class="closeIcon bx bx-x bx-lg text-right"></i></h3>
 
         <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
         <p class=" text-m text-white my-5 text-center">Due date:</p>
         <input type="date" class="input w-full max-w-xl inputDate"/>
         <div class="modal-action">
-            <form method="dialog" class="modal-backdrop">
+            <form method="dialog">
                 <button class="btn content-center">Submit</button>
             </form>
         </div>
