--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+<script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
+
 <dialog id="my_modal_1" class="modal">
     <div class="modal-box bg-secondary items-center">
         <h3 class="font-bold text-lg text-white mb-5 text-center">Add Project <i
@@ -26,15 +29,71 @@
         </div>
     </div>
 </dialog>
-
+<!--
 <div id="nav-bar">
     <div class="add-box nav-project-addProject" onclick="my_modal_1.showModal()" target="_blank">
         <span>+ Add Project</span></div>
     <br>
     <div class="nav-bar-heading">NOTES</div>
     <div id="nav-content"></div>
-    </div>
+</div>-->
 
+
+<button data-drawer-target="sidebar-multi-level-sidebar" data-drawer-toggle="sidebar-multi-level-sidebar"
+        aria-controls="sidebar-multi-level-sidebar" type="button"
+        class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
+    <span class="sr-only">Open sidebar</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" fill-rule="evenodd"
+              d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+    </svg>
+</button>
+
+<aside id="sidebar-multi-level-sidebar"
+       class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
+       aria-label="Sidebar">
+    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 border-r-2">
+        <ul class="space-y-2 font-medium nav-content">
+            <li>
+                <button type="button" onclick="my_modal_1.showModal()"
+                        class="flex w-full p-2 text-white transition duration-75 rounded-lg group bg-blue-700 hover:text-white"
+                        aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <svg class="flex-shrink-0 w-5 h-5 transition duration-75 text-white" aria-hidden="true"
+                         xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
+                        <path d="M19 11h-6V5h-2v6H5v2h6v6h2v-6h6z"></path>
+                    </svg>
+                    <span class="flex-1 ms-3 text-left whitespace-nowrap">Add a Project</span>
+                </button>
+            </li>
+            <li>
+                <button
+                        type="button"
+                        class="flex items-center w-full p-2 text-base text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100"
+                        aria-controls="dropdown-example"
+                        data-collapse-toggle="dropdown-example"
+                        onclick="document.getElementById('dropdown-example').classList.toggle('hidden')"
+                >
+                    <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 group-hover:text-gray-900"
+                         aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
+                        <path d="M20 5h-9.586L8.707 3.293A.997.997 0 0 0 8 3H4c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V7c0-1.103-.897-2-2-2z"></path>
+                    </svg>
+                    <span class="flex-1 ms-3 text-left rtl:text-right whitespace-nowrap">E-commerce</span>
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                         viewBox="0 0 10 6">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="m1 1 4 4 4-4"/>
+                    </svg>
+                </button>
+                <ul id="dropdown-example" class="hidden py-2 space-y-2">
+                    <li>
+                        <a href="#"
+                           class="flex items-center w-full p-2 text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100">Products</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</aside>
 
 <div class="container">
     <div class="toolbar">
