--- a/index.html
+++ b/index.html
@@ -15,6 +15,41 @@
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
 
+<button id="sidebar-toggle" type="button"
+        class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+    <span class="sr-only">Open sidebar</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" fill-rule="evenodd"
+              d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+    </svg>
+</button>
+
+
+<aside id="sidebar-multi-level-sidebar"
+       class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 bg-gray-50 dark:bg-gray-800"
+       aria-label="Sidebar">
+    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 border-r-2">
+        <ul class="space-y-2 font-medium nav-content">
+            <li>
+                <button type="button" onclick="my_modal_1.showModal()"
+                        class="flex w-full p-2 text-white transition duration-75 rounded-lg group bg-blue-700 hover:text-white"
+                        aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
+                    <svg class="flex-shrink-0 w-5 h-5 transition duration-75 text-white" aria-hidden="true"
+                         xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
+                        <path d="M19 11h-6V5h-2v6H5v2h6v6h2v-6h6z"></path>
+                    </svg>
+                    <span class="flex-1 ms-3 text-left whitespace-nowrap">Add a Project</span>
+                </button>
+            </li>
+            <li>
+                <ul id="dropdown-example" class="hidden py-2 space-y-2">
+                </ul>
+            </li>
+        </ul>
+    </div>
+</aside>
+
+
 <dialog id="my_modal_1" class="modal">
     <div class="modal-box bg-secondary">
         <i class="closeIcon bx bx-x bx-lg text-white self-right"></i>
@@ -43,40 +78,6 @@
     </div>
 </dialog>
 
-
-<button data-drawer-target="sidebar-multi-level-sidebar" data-drawer-toggle="sidebar-multi-level-sidebar"
-        aria-controls="sidebar-multi-level-sidebar" type="button"
-        class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
-    <span class="sr-only">Open sidebar</span>
-    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-        <path clip-rule="evenodd" fill-rule="evenodd"
-              d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
-    </svg>
-</button>
-
-<aside id="sidebar-multi-level-sidebar"
-       class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0"
-       aria-label="Sidebar">
-    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 border-r-2">
-        <ul class="space-y-2 font-medium nav-content">
-            <li>
-                <button type="button" onclick="my_modal_1.showModal()"
-                        class="flex w-full p-2 text-white transition duration-75 rounded-lg group bg-blue-700 hover:text-white"
-                        aria-controls="dropdown-example" data-collapse-toggle="dropdown-example">
-                    <svg class="flex-shrink-0 w-5 h-5 transition duration-75 text-white" aria-hidden="true"
-                         xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
-                        <path d="M19 11h-6V5h-2v6H5v2h6v6h2v-6h6z"></path>
-                    </svg>
-                    <span class="flex-1 ms-3 text-left whitespace-nowrap">Add a Project</span>
-                </button>
-            </li>
-            <li>
-                <ul id="dropdown-example" class="hidden py-2 space-y-2">
-                </ul>
-            </li>
-        </ul>
-    </div>
-</aside>
 
 <div class="p-4 sm:ml-64 mx-auto container">
 
