sidebar responsive ENTFERNT

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 </div>
 
-<div class="container hidden">
+<div class="container textEditor hidden">
     <div class="toolbar">
         <div class="head">
             <label for="formatSelect"></label><select id="formatSelect">
