--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <aside id="sidebar-multi-level-sidebar"
        class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform
-       bg-gray-50"
+       bg-gray-50 hidden"
        aria-label="sidebar-multi-level-sidebar">
     <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 border-r-2">
         <ul class="space-y-2 font-medium nav-content">
