design von note cards

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </dialog>
 
 
-<div class="p-4 sm:ml-64 mx-auto container ">
+<div class="p-4 mx-auto container ">
 
     <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 container-for-cards">
     </div>
