--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="container textEditor hidden">
+<div class="container textEditor w-full hidden">
     <div class="toolbar">
         <div class="head">
             <label for="formatSelect"></label><select id="formatSelect">
