--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
 
 <div class="container mx-auto textEditor hidden">
     <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#3019bd">
-            <path d="M13.293 6.293 7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"></path>
-        </svg>
-        Back to notes
+        back to notes
     </div>
     <div class="toolbar">
         <div class="head">
