--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="container mx-auto textEditor hidden">
-    <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer">
+    <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer p-4">
         back to notes
     </div>
     <div class="toolbar">
