--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
 </div>
 
 <div class="container mx-auto textEditor hidden">
-
     <div class="toolbar">
-        <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer p-4">
-            back to notes
+        <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer p-4 justify-start text-left p-0">
+            < back to notes
         </div>
         <div class="head">
             <label for="formatSelect"></label><select id="formatSelect">
