--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="container mx-auto textEditor hidden">
+<div class="container mx-0 textEditor hidden">
     <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer p-0">
         < back to notes
     </div>
