--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </div>
 
 <div class="container mx-0 textEditor hidden">
-    <div class="back-to-notes text-[#3019bd] font-bold text-lg cursor-pointer p-0">
+    <div class="back-to-notes text-[#3019bd] text-lg cursor-pointer p-0">
         < back to notes
     </div>
     <div class="toolbar">
