dicke von backtoprojects, backtonotes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="container mx-0 textEditor hidden">
+<div class="container w-full textEditor hidden">
     <div class="back-to-notes text-[#3019bd] font-bold text-md cursor-pointer pt-2">
         < back to notes
     </div>
