--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 
 <dialog id="my_modal_1" class="modal">
-    <div class="modal-box bg-secondary">
-        <i class="closeIcon bx bx-x bx-lg text-white self-right"></i>
-        <h3 class="font-bold text-lg text-white mb-5 text-center -mt-10">Add Project</h3>
+    <div class="modal-box bg-white shadow-2xl">
+        <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
+        <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Add Project</h3>
 
         <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
-        <p class="text-m text-white my-5 text-center">Due date:</p>
+        <p class="text-m text-[#3019BD] my-5 text-center">Due date:</p>
         <input type="date" class="input w-full max-w-xl inputDate mb-5"/>
         <div class="col-span-2 sm:col-span-1">
-            <p class="text-m text-white my-5 text-center">Category</p>
+            <p class="text-m text-[#3019BD] my-5 text-center">Category</p>
             <select id="category"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5">
                 <option selected="">Select category</option>
