--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
         <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Add Project</h3>
 
-        <input type="text" placeholder="Name of the project" class="input w-full max-w-xl mb-5 inputTitle"/>
+        <input type="text" placeholder="Name of the project"
+               class="input w-full max-w-xl mb-5 inputTitle border-[#3019BD]"/>
         <p class="text-m text-[#3019BD] my-5 text-center">Due date:</p>
-        <input type="date" class="input w-full max-w-xl inputDate mb-5"/>
+        <input type="date" class="input w-full max-w-xl inputDate mb-5 border-[#3019BD]"/>
         <div class="col-span-2 sm:col-span-1">
             <p class="text-m text-[#3019BD] my-5 text-center">Category</p>
             <select id="category"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5">
+                    class="bg-gray-50 border border-[#3019BD] text-gray-900 text-sm rounded-lg focus:ring-[#3019BD] block w-full p-2.5">
                 <option selected="">Select category</option>
                 <option value="School">School</option>
                 <option value="Work">Work</option>
@@ -38,7 +39,7 @@
 
         <div class="modal-action">
             <form method="dialog">
-                <button class="submit-btn btn content-center">Submit</button>
+                <button class="submit-btn btn content-center bg-[#3019bd] text-white">Submit</button>
             </form>
         </div>
     </div>
