--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.1/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="style.css">
+    <!-- CSS für die Navbar -->
+    <link rel="stylesheet" href="navbar-style.css">
     <title>Notes</title>
 </head>
 <body>
