navbar hinzugefügt script.js

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </li>
 
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="https://benjiwurfl.github.io/Notes/">
                         <i class='bx bx-edit icon'></i>
                         <span class="text nav-text">Notes</span>
                     </a>
