navbar hinzugefügt script.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <i class='bx bx-chevron-right toggle'></i>
+        <i class='bx bx-chevron-right toggle-sidebar'></i>
     </header>
 
     <div class="menu-bar">
