navbar hinzugefügt script.js

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
     </dialog>
 
-    <div class="p-4 mx-auto container dark:bg-gray-700 over-div">
+    <div class="p-4 mx-auto container over-div">
 
         <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 container-for-cards">
         </div>
