--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <div class="container mx-auto textEditor hidden">
-        <div class="back-to-notes text-[#3019bd] font-bold text-md cursor-pointer pt-2">
+        <div class="back-to-notes text-[#3019bd] font-bold text-md cursor-pointer pt-2 pl-4">
             < back to notes
         </div>
         <div class="toolbar">
