edit project button

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             <div class="modal-action">
                 <form method="dialog">
-                    <button class="submit-btn btn content-center bg-[#3019bd] text-white">Submit</button>
+                    <button class="update-project btn content-center bg-[#3019bd] text-white">Submit</button>
                 </form>
             </div>
         </div>
