--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="navbar-style.css">
     <title>Notes</title>
 </head>
@@ -108,39 +108,67 @@
 </nav>
 
 
-<!-- Fenster zum Hinzufügen von Projekten -->
-<dialog id="my_modal_1" class="modal">
-    <div class="modal-box bg-white shadow-2xl">
-        <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
-        <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Add Project</h3>
-
-        <input type="text" placeholder="Name of the project"
-               class="input w-full max-w-xl mb-5 inputTitle border-[#3019BD]"/>
-        <p class="text-m text-[#3019BD] my-5 text-center">Due date:</p>
-        <input type="date" class="input w-full max-w-xl inputDate mb-5 border-[#3019BD]"/>
-        <div class="col-span-2 sm:col-span-1">
-            <p class="text-m text-[#3019BD] my-5 text-center">Category</p>
-            <select id="category"
-                    class="bg-gray-50 border border-[#3019BD] text-gray-900 text-sm rounded-lg focus:ring-[#3019BD] block w-full p-2.5">
-                <option selected="">Select category</option>
-                <option value="School">School</option>
-                <option value="Work">Work</option>
-                <option value="Leisure">Leisure Time</option>
-
-            </select>
-        </div>
-
-        <div class="modal-action">
-            <form method="dialog">
-                <button class="submit-btn btn content-center bg-[#3019bd] text-white">Submit</button>
-            </form>
-        </div>
-    </div>
-</dialog>
-
-
 <section class="home">
 
+    <!-- Fenster zum Hinzufügen von Projekten -->
+    <dialog id="my_modal_1" class="modal">
+        <div class="modal-box bg-white shadow-2xl">
+            <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
+            <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Add Project</h3>
+
+            <input type="text" placeholder="Name of the project"
+                   class="input w-full max-w-xl mb-5 inputTitle border-[#3019BD]"/>
+            <p class="text-m text-[#3019BD] my-5 text-center">Due date:</p>
+            <input type="date" class="input w-full max-w-xl inputDate mb-5 border-[#3019BD]"/>
+            <div class="col-span-2 sm:col-span-1">
+                <p class="text-m text-[#3019BD] my-5 text-center">Category</p>
+                <select id="category"
+                        class="bg-gray-50 border border-[#3019BD] text-gray-900 text-sm rounded-lg focus:ring-[#3019BD] block w-full p-2.5">
+                    <option selected="">Select category</option>
+                    <option value="School">School</option>
+                    <option value="Work">Work</option>
+                    <option value="Leisure">Leisure Time</option>
+
+                </select>
+            </div>
+
+            <div class="modal-action">
+                <form method="dialog">
+                    <button class="submit-btn btn content-center bg-[#3019bd] text-white">Submit</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
+
+    <!-- Fenster zum Editieren von Projekten -->
+    <dialog id="my_modal_2" class="modal">
+        <div class="modal-box bg-white shadow-2xl">
+            <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
+            <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Edit Project</h3>
+
+            <input type="text" placeholder="Name of the project"
+                   class="input input-name w-full max-w-xl mb-5 inputTitle border-[#3019BD]"/>
+            <p class="text-m text-[#3019BD] my-5 text-center">Due date:</p>
+            <input type="date" class="input input-date w-full max-w-xl inputDate mb-5 border-[#3019BD]"/>
+            <div class="col-span-2 sm:col-span-1">
+                <p class="text-m  text-[#3019BD] my-5 text-center">Category</p>
+                <select id="cat"
+                        class="input-category bg-gray-50 border border-[#3019BD] text-gray-900 text-sm rounded-lg focus:ring-[#3019BD] block w-full p-2.5">
+                    <option selected="">Select category</option>
+                    <option value="School">School</option>
+                    <option value="Work">Work</option>
+                    <option value="Leisure">Leisure Time</option>
+
+                </select>
+            </div>
+
+            <div class="modal-action">
+                <form method="dialog">
+                    <button class="update-project btn content-center bg-[#3019bd] text-white">Submit</button>
+                </form>
+            </div>
+        </div>
+    </dialog>
 
 
     <div class="p-4 mx-auto container over-div">
