--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/@mind-wired/core/dist/mind-wired.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar-style.css">
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
@@ -19,12 +20,13 @@
 
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
+<!-- Navbar -->
 <nav class="sidebar close">
     <header>
         <div class="image-text">
-              <span class="image">
-                  <img src="images/Favicon/Thinkwise-Logo-Quadr-Tr.png" alt="">
-              </span>
+            <span class="image">
+                <img src="images/Thinkwise-Logo-Quadr-Tr.png" alt="">
+            </span>
 
             <div class="text logo-text">
                 <span class="name">Thinkwise</span>
