--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     </dialog>
 
     <!-- Fenster zum Editieren von Projekten -->
-    <dialog id="my_modal_2" class="modal">
+    <dialog id="my_modal_2" class="modal2">
         <div class="modal-box bg-white shadow-2xl">
-            <i class="closeIcon bx bx-x bx-lg text-[#3019BD] self-right"></i>
+            <i class="close-icon bx bx-x bx-lg text-[#3019BD] self-right"></i>
             <h3 class="font-bold text-lg text-[#3019BD] mb-5 text-center -mt-10">Edit Project</h3>
 
             <input type="text" placeholder="Name of the project"
