--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
     <div class="container mx-auto textEditor hidden">
         <div class="back-to-notes text-[#3019bd] font-bold text-md cursor-pointer pt-2 pl-4">
             < back to notes
+            <span
+                    class="flex justify-end"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                  viewBox="0 0 24 24" fill="#3019BD">   <path
+                    d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"></path>   <path
+                    d="M9 10h2v8H9zm4 0h2v8h-2z"></path></svg>
+                </span>
         </div>
         <div class="toolbar">
             <div class="head">
