--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
     </div>
 
     <div class="container mx-auto textEditor hidden">
-        <div class="flow-root text-[#3019bd] font-bold text-md pt-2">
-            <span class="back-to-notes cursor-pointer pl-4 float-left"> < back to notes</span>
+        <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
+            <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
+            <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
             <span class="delete-note cursor-pointer pr-4 float-right">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#3019BD">
                     <path d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"></path>   <path
