--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <div class="container mx-auto textEditor hidden">
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
-            <span class="back-to-notes cursor-pointer pl-4 flex flex-row-reverse justify-center p-10">
-                  <i class="bg-yellow-100 peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">1</i>
+            <span class="back-to-notes cursor-pointer pl-4 flex flex-row-reverse justify-center px-10">
+                  <i class="bx-bxs-star bg-yellow-100 peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">1</i>
                   <i class="bg-yellow-100 peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">2</i>
                   <i class="bg-yellow-100 peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">3</i>
                   <i class="bg-yellow-100 peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">4</i>
