--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
     <div class="container mx-auto textEditor hidden">
         <div class="flex justify-between text-[#3019bd] font-bold text-md pt-2">
             <span class="back-to-notes cursor-pointer pl-4"> < back to notes</span>
-            <span class="back-to-notes cursor-pointer pl-4 flex flex-row-reverse justify-center px-10">
-                <span class="peer peer-hover:bg-yellow-500 hover:bg-yellow-500 w-12 h-12 mx-2">
+            <span class="back-to-notes cursor-pointer flex flex-row-reverse justify-center">
+                <span class="peer peer-hover:bg-yellow-500 hover:bg-yellow-500 mx-2">
                       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#3019bd"><path
                               d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
                   </span>
@@ -204,6 +204,7 @@
                               d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
                   </span>
             </span>
+
             <span class="delete-note cursor-pointer pr-4 float-right">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#3019BD">
                     <path d="M5 20a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V8h2V6h-4V4a2 2 0 0 0-2-2H9a2 2 0 0 0-2 2v2H3v2h2zM9 4h6v2H9zM8 8h9v12H7V8z"></path>   <path
